rest/logs-deployment.yaml
apiVersion: v1 
kind: Pod
metadata:
    name: logger
spec:
    containers:
    - name: logger
      image: chernide/finalproj:logs_version1
