rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rest-server
    labels:
        app: rest-server
spec:
    replicas: 3
    selector:
        matchLabels:
            app: rest-server
    template:
        metadata:
            labels:
                app: rest-server
        spec:
            containers:
            - name: rest-server
              image: chernide/finalproj:rest_server_version1
