rest/rest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: rest-ingress
spec:
    rules:
     - http:
        paths:
        - path: /*
          backend:
            serviceName: rest-server-service
            servicePort: 80
